# JKS_Church_Presenter

./: .env  .gitignore  Cargo.toml  README.md  ins.ps1  install.sh  install_win.bat  jks.db  un.ps1  uninstall.sh  uninstall_win.bat
jks_premietac/: Cargo.toml  README.md
jks_premietac/src/: app.rs  dominikani_logo.rs  event.rs  file_opener.rs  main.rs  popups.rs  song_lister.rs  ui.rs
monitor_lib/: Cargo.toml
monitor_lib/src/: lib.rs
monitor_selector/: Cargo.toml
monitor_selector/src/: main.rs
prehladavac_db_jks/: Cargo.toml  jks.csv  jks.db
prehladavac_db_jks/migrations/2026-05-03-144527-0000_create_jks/: up.sql
prehladavac_db_jks/migrations/2026-05-03-145328-0000_fix_jks_schema/: down.sql  up.sql
prehladavac_db_jks/migrations/2026-05-03-170144-0000_fix_jks_primary_key/: up.sql
prehladavac_db_jks/migrations/2026-05-07-082253-0000_jks_new_format/: down.sql  up.sql
prehladavac_db_jks/migrations/2026-05-08-161602-0000_jks_typ_format/: down.sql  up.sql
prehladavac_db_jks/migrations/2026-05-09-094136-0000_jks_typ_format_uprava/: down.sql  up.sql
prehladavac_db_jks/src/: db.rs  lib.rs  main.rs  model.rs  schema.rs
tvoric_platna/: Cargo.toml
tvoric_platna/src/: gui.rs  initializer.rs  main.rs
