[package]
name = "prehladavac_db_jks"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
diesel = { version = "2.3.7", features = ["sqlite"] }
dotenvy = "0.15.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
winit = "0.30.13"

[target.'cfg(target_os = "windows")'.dependencies]
libsqlite3-sys = { version = "0.37", features = ["bundled"] }